# convmit

./: Cargo.toml  README.md  justfile
src/: ai.rs  claude.rs  cli.rs  config.rs  git.rs  lib.rs  main.rs  models.rs
src/ai/: claude.rs  gemini.rs  mistral.rs  mod.rs  openai.rs
tests/: integration_tests.rs
