[package]
name = "convmit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47", features = ["full"] }
dirs = "6.0.0"
toml = "0.8"
anyhow = "1.0.99"
colored = "3.0.0"
async-trait = "0.1"
